upload new version

--- a/luanvantn/public/user/css/main.css
+++ b/luanvantn/public/user/css/main.css
@@ -1710,9 +1710,7 @@ a.read-more:hover{
 Blog with right sidebar
 *****************************/
 
-.single-blog{
-  padding-bottom: 30px;
-}
+
 
 .single-blog .post-bottom{
   border-bottom: 1px solid #eeeeee;
@@ -2864,4 +2862,26 @@ span.stButton_gradient,
 }
 .check_login {
   cursor: pointer;
+}
+
+.row .wp-focus {
+    overflow: hidden;
+}
+.row .wp-focus:hover .post-title
+{
+  color: #00aeef
+}
+
+
+
+.row .wp-focus .single-blog .del-tool{
+  text-align: right;
+}
+
+.row .wp-focus .single-blog .del-tool i
+{
+      font-size: 30px;
+}
+.row .wp-focus:hover .post-title .fa-trash{
+  color: red ;
 }
