--- a/luanvantn/public/user/css/main.css
+++ b/luanvantn/public/user/css/main.css
@@ -2898,3 +2898,6 @@ span.stButton_gradient,
     -ms-box-shadow: 30px 30px 10px;
     margin-bottom: 50px;
 }
+.aling_top{
+  padding-top: 100px
+}
